# programming-the-multiverse

./: README.md  pyproject.toml
part-4/: 01-swap-matrix.ipynb
part-5/: 01-swap.ipynb
part-6/: 01-kickback.ipynb  02-swap-series.ipynb  03-kickback-matrices.ipynb
part-7/: 01-bern-vaz-setup.ipynb  02-bern-vaz-solution.ipynb  03-bern-vaz-solution-deep-dive.ipynb  04-bern-vaz-matrix.ipynb
