[tool.poetry]
name = "programming-the-multiverse"
version = "0.1.0"
description = ""
authors = ["Erica Kastner <me@erica.works>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
qiskit = {extras = ["visualization"], version = "^1.0.2"}
matplotlib = "^3.8.3"
qiskit-aer = "^0.13.3"
qiskit-ibm-runtime = "^0.21.1"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
