[tool.poetry]
name = "programming-the-multiverse"
version = "0.1.0"
description = ""
authors = ["Erica Kastner <me@erica.works>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
qiskit = {extras = ["visualization"], version = "^1.1.0"}
qiskit-aer = "^0.14.2"
matplotlib = "^3.8.3"
jupyter = "^1.0.0"
pylatexenc = "^2.10"
qiskit-ibm-runtime = "^0.24.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
